--- a/languages/apex-wordpress-plugin-sv_SE.po
+++ b/languages/apex-wordpress-plugin-sv_SE.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-07-05 23:07+0200\n"
-"PO-Revision-Date: 2019-07-05 23:08+0200\n"
+"POT-Creation-Date: 2019-08-14 22:04+0200\n"
+"PO-Revision-Date: 2019-08-14 22:07+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: sv_SE\n"
@@ -17,273 +17,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: templates/courses.php:89
-msgid "Prices and upcoming dates:"
-msgstr "Pris och kommande datum:"
-
-#: templates/courses.php:120
-#, php-format
-msgid "%s days"
-msgstr "%s dagar"
-
-#: templates/courses.php:122
-#, php-format
-msgid "%s day"
-msgstr "%s day"
-
-#: templates/courses.php:138
-msgid "Dates"
-msgstr "Datum"
-
-#: templates/courses.php:153 templates/courses.php:244
-msgid "Available seats:"
-msgstr "Tillgängliga platser:"
-
-#: templates/courses.php:165 templates/courses.php:255
-msgid "Apply Now"
-msgstr "Anmäl dig"
-
-#: templates/courses.php:169 templates/courses.php:260
-msgid "Few seats remaining"
-msgstr "Få platser kvar"
-
-#: templates/courses.php:173 templates/courses.php:264
-msgid "This event is fully booked"
-msgstr "Detta kurstillfälle är fullt"
-
-#: templates/courses.php:191 templates/courses.php:282
-msgid "Your application was successfully submitted!"
-msgstr "Du är nu anmäld på kurstillfället!"
-
-#: templates/courses.php:192 templates/courses.php:283
-msgid "Something went wrong with your application"
-msgstr "Det blev ett fel när anmälan skulle göras"
-
-#: templates/courses.php:220 templates/courses.php:311
-msgid "No upcoming events"
-msgstr "Inga kommande kurstillfällen"
-
-#: templates/courses.php:234
-#, php-format
-msgid "Dates for %s"
-msgstr "Datum för %s"
-
-#: templates/modal.php:6
-msgid "Register on Event"
-msgstr "Registrera dig"
-
-#: templates/modal.php:19
-msgid "Given Name *"
-msgstr "Förnamn *"
-
-#: templates/modal.php:24
-msgid "Surname *"
-msgstr "Efternamn *"
-
-#: templates/modal.php:28
-msgid "Email *"
-msgstr "E-post *"
-
-#: templates/modal.php:33
-msgid "Phone *"
-msgstr "Telefonnummer *"
-
-#: templates/modal.php:44
-msgid "Title"
-msgstr "Titel"
-
-#: templates/modal.php:59
-msgid "Company *"
-msgstr "Företag *"
-
-#: templates/modal.php:71
-msgid "Sector"
-msgstr "Bransch"
-
-#: templates/modal.php:86
-msgid "Address row 1 *"
-msgstr "Addressrad 1 *"
-
-#: templates/modal.php:90
-msgid "Address row 2"
-msgstr "Addressrad 2"
-
-#: templates/modal.php:96
-msgid "Zip Code *"
-msgstr "Postnummer *"
-
-#: templates/modal.php:101
-msgid "City *"
-msgstr "Postort *"
-
-#: templates/modal.php:107
-msgid "Country *"
-msgstr "Land *"
-
-#: templates/modal.php:109
-msgid "Sweden"
-msgstr "Sverige"
-
-#: templates/modal.php:110
-msgid "Denmark"
-msgstr "Danmark"
-
-#: templates/modal.php:111
-msgid "Finland"
-msgstr "Finland"
-
-#: templates/modal.php:112
-msgid "Norway"
-msgstr "Norge"
-
-#: templates/modal.php:119
-msgid "Apply"
-msgstr "Boka"
-
-#: inc/Pages/Admin.php:34
-msgid "Apex Wordpress Plugin Settings"
-msgstr "Apex Wordpress Inställningar"
-
-#: inc/Pages/Admin.php:183
-msgid "General Settings"
-msgstr "Allmänna inställningar"
-
-#: inc/Pages/Admin.php:184
-msgid "API Settings"
-msgstr "API Inställningar"
-
-#: inc/Pages/Admin.php:185
-msgid "Additional CSS"
-msgstr "Extra CSS"
-
-#: inc/Pages/Admin.php:186
-msgid "Course extra information"
-msgstr "Extra kursinforation"
-
-#: inc/Pages/Admin.php:187
-msgid "Courses page"
-msgstr "Kurslistningssida"
-
-#: inc/Pages/Admin.php:226
-msgid "Amount of minutes before each update"
-msgstr "Antal minuter mellan uppdateringar"
-
-#: inc/Pages/Admin.php:227
-msgid "Currency (Please verify, that selected currency exist in API)"
-msgstr "Valuta (se till att valutan existerar i API:et)"
-
-#: inc/Pages/Admin.php:228
-msgid "Slug for courses"
-msgstr "Slug för kurser"
-
-#: inc/Pages/Admin.php:229
-msgid "Display events"
-msgstr "Visa kurstillfällen"
-
-#: inc/Pages/Admin.php:230
-msgid "Add header and footer to course page"
-msgstr "Lägg till huvud och fot på kurssidan"
-
-#: inc/Pages/Admin.php:231
-msgid "Server Name"
-msgstr "Servernamn"
-
-#: inc/Pages/Admin.php:232
-msgid "Public API Key"
-msgstr "Publik API nyckel"
-
-#: inc/Pages/Admin.php:233
-msgid "Private API Key"
-msgstr "Privat API nyckel"
-
-#: inc/Pages/Admin.php:234
-msgid "Portal ID"
-msgstr "Portal ID"
-
-#: inc/Pages/Admin.php:235
-msgid "Display Available Seats"
-msgstr "Visa tillgängliga platser"
-
-#: inc/Pages/Admin.php:236
-msgid "Display Title"
-msgstr "Visa titel"
-
-#: inc/Pages/Admin.php:237
-msgid "Display Sector"
-msgstr "Visa bransch"
-
-#: inc/Pages/Admin.php:238
-msgid "Courses Title"
-msgstr "Kurstitel"
-
-#: inc/Pages/Admin.php:239
-msgid "Courses Section"
-msgstr "Kursinformation"
-
-#: inc/Pages/Admin.php:240
-msgid "Courses Content"
-msgstr "Kursinnehåll"
-
-#: inc/Pages/Admin.php:241
-msgid "Courses Price Title"
-msgstr "Kurspristitel"
-
-#: inc/Pages/Admin.php:242
-msgid "Courses Price"
-msgstr "Kurspris"
-
-#: inc/Pages/Admin.php:243
-msgid "Courses Days"
-msgstr "Kursdagar"
-
-#: inc/Pages/Admin.php:244
-msgid "Courses Event"
-msgstr "Kurstillfälle"
-
-#: inc/Pages/Admin.php:245
-msgid "Courses Event Date"
-msgstr "Kurstillfälledatum"
-
-#: inc/Pages/Admin.php:246
-msgid "Courses Event Text"
-msgstr "Kurstillfälle text"
-
-#: inc/Pages/Admin.php:247
-msgid "Courses Event Button"
-msgstr "Kurstillfälle knapp"
-
-#: inc/Pages/Admin.php:248
-msgid "Few seats left text"
-msgstr "Få platser kvar text"
-
-#: inc/Pages/Admin.php:249
-msgid "Courses Modal Content"
-msgstr "Anmälanpopup innehåll"
-
-#: inc/Pages/Admin.php:250
-msgid "Courses Modal Button"
-msgstr "Anmälanpopup knapp"
-
-#: inc/Pages/Admin.php:251
-msgid "Course extra info"
-msgstr "Extra kursinformation"
-
-#: inc/Pages/Admin.php:252
-msgid "Course extra info styles"
-msgstr "Extra kursinformation CSS"
-
-#: inc/Pages/Admin.php:253
-msgid "Page title"
-msgstr "Sidtitel"
-
-#: inc/Pages/Admin.php:254
-msgid "Content before courses list"
-msgstr "Innehåll före kurslistningen"
-
-#: inc/Pages/Admin.php:255
-msgid "Content after courses list"
-msgstr "Innehåll efter kurslistningen"
+"X-Poedit-KeywordsList: __;_e\n"
+"X-Poedit-Basepath: ..\n"
+"X-Poedit-SearchPath-0: .\n"
 
 #: inc/Api/CronRequest.php:33
 msgid "Custom Settings"
@@ -292,6 +28,102 @@ msgstr "Anpassade inställningar"
 #: inc/Base/SettingsLinks.php:19
 msgid "Settings"
 msgstr "Inställningar"
+
+#: inc/Pages/Admin.php:34
+msgid "Apex Wordpress Plugin Settings"
+msgstr "Apex Wordpress Inställningar"
+
+#: inc/Pages/Admin.php:188
+msgid "General Settings"
+msgstr "Allmänna inställningar"
+
+#: inc/Pages/Admin.php:189
+msgid "API Settings"
+msgstr "API Inställningar"
+
+#: inc/Pages/Admin.php:190
+msgid "Additional CSS"
+msgstr "Extra CSS"
+
+#: inc/Pages/Admin.php:191
+msgid "Course extra information"
+msgstr "Extra kursinforation"
+
+#: inc/Pages/Admin.php:192
+msgid "Courses page"
+msgstr "Kurslistningssida"
+
+#: inc/Pages/Admin.php:231
+msgid "Amount of minutes before each update"
+msgstr "Antal minuter mellan uppdateringar"
+
+#: inc/Pages/Admin.php:232
+msgid "Currency (Please verify, that selected currency exist in API)"
+msgstr "Valuta (se till att valutan existerar i API:et)"
+
+#: inc/Pages/Admin.php:233
+msgid "Slug for courses"
+msgstr "Slug för kurser"
+
+#: inc/Pages/Admin.php:234
+msgid "Display events"
+msgstr "Visa kurstillfällen"
+
+#: inc/Pages/Admin.php:235
+msgid "Add header and footer to course page"
+msgstr "Lägg till huvud och fot på kurssidan"
+
+#: inc/Pages/Admin.php:236
+msgid "Server address"
+msgstr "Serveradress"
+
+#: inc/Pages/Admin.php:237
+msgid "Public API Key"
+msgstr "Publik API nyckel"
+
+#: inc/Pages/Admin.php:238
+msgid "Private API Key"
+msgstr "Privat API nyckel"
+
+#: inc/Pages/Admin.php:239
+msgid "Portal ID"
+msgstr "Portal ID"
+
+#: inc/Pages/Admin.php:240
+msgid "Display Available Seats"
+msgstr "Visa tillgängliga platser"
+
+#: inc/Pages/Admin.php:241
+msgid "Display Title"
+msgstr "Visa titel"
+
+#: inc/Pages/Admin.php:242
+msgid "Display Sector"
+msgstr "Visa bransch"
+
+#: inc/Pages/Admin.php:243
+msgid "Extra course page CSS"
+msgstr "Extra CSS på kurssidan"
+
+#: inc/Pages/Admin.php:244
+msgid "Extra course archive page CSS"
+msgstr "Extra CSS på kurslistningssidan"
+
+#: inc/Pages/Admin.php:245
+msgid "Course extra info"
+msgstr "Extra kursinformation"
+
+#: inc/Pages/Admin.php:246
+msgid "Page title"
+msgstr "Sidtitel"
+
+#: inc/Pages/Admin.php:247
+msgid "Content before courses list"
+msgstr "Innehåll före kurslistningen"
+
+#: inc/Pages/Admin.php:248
+msgid "Content after courses list"
+msgstr "Innehåll efter kurslistningen"
 
 #: inc/WpApi/Callbacks/AdminCallbacks.php:39
 msgid "Provide the general plugin settings"
@@ -380,29 +212,139 @@ msgid "Enter portal ID"
 msgstr "Ange portal ID"
 
 #: inc/WpApi/Callbacks/AdminCallbacks.php:180
-#: inc/WpApi/Callbacks/AdminCallbacks.php:191
-#: inc/WpApi/Callbacks/AdminCallbacks.php:201
-#: inc/WpApi/Callbacks/AdminCallbacks.php:211
-#: inc/WpApi/Callbacks/AdminCallbacks.php:221
-#: inc/WpApi/Callbacks/AdminCallbacks.php:231
-#: inc/WpApi/Callbacks/AdminCallbacks.php:241
-#: inc/WpApi/Callbacks/AdminCallbacks.php:251
-#: inc/WpApi/Callbacks/AdminCallbacks.php:261
-#: inc/WpApi/Callbacks/AdminCallbacks.php:271
-#: inc/WpApi/Callbacks/AdminCallbacks.php:281
-#: inc/WpApi/Callbacks/AdminCallbacks.php:291
-#: inc/WpApi/Callbacks/AdminCallbacks.php:307
-#: inc/WpApi/Callbacks/AdminCallbacks.php:317
-#: inc/WpApi/Callbacks/AdminCallbacks.php:327
+#: inc/WpApi/Callbacks/AdminCallbacks.php:192
 msgid ""
-"Example (add any another css styling):\n"
-"color: #fff;\n"
-"background: #222;\n"
+"Example (add css styling):\n"
+"h2 {\n"
+"  color: #fff;\n"
+"  background: #222;\n"
+"}\n"
 msgstr ""
-"Exempel (du kan ange vilken CSS som helst):\n"
-"color: #fff;\n"
-"background: #222;\n"
+"Exempel (lägg till css style):\n"
+"h2 {\n"
+"  color: #fff;\n"
+"  background: #222;\n"
+"}\n"
 
-#: inc/WpApi/Callbacks/AdminCallbacks.php:337
+#: inc/WpApi/Callbacks/AdminCallbacks.php:210
 msgid "Enter page title"
 msgstr "Ange sidans titel"
+
+#: templates/courses.php:77
+msgid "Prices and upcoming dates:"
+msgstr "Pris och kommande datum:"
+
+#: templates/courses.php:108
+#, php-format
+msgid "%s days"
+msgstr "%s dagar"
+
+#: templates/courses.php:110
+#, php-format
+msgid "%s day"
+msgstr "%s dag"
+
+#: templates/courses.php:126
+msgid "Dates"
+msgstr "Datum"
+
+#: templates/courses.php:141 templates/courses.php:231
+msgid "Available seats:"
+msgstr "Tillgängliga platser:"
+
+#: templates/courses.php:152 templates/courses.php:241
+msgid "Apply Now"
+msgstr "Anmäl dig"
+
+#: templates/courses.php:156 templates/courses.php:245
+msgid "Few seats remaining"
+msgstr "Få platser kvar"
+
+#: templates/courses.php:160 templates/courses.php:249
+msgid "This event is fully booked"
+msgstr "Detta kurstillfälle är fullt"
+
+#: templates/courses.php:178 templates/courses.php:267
+msgid "Your application was successfully submitted!"
+msgstr "Du är nu anmäld på kurstillfället!"
+
+#: templates/courses.php:179 templates/courses.php:268
+msgid "Something went wrong with your application"
+msgstr "Det blev ett fel när anmälan skulle göras"
+
+#: templates/courses.php:207 templates/courses.php:296
+msgid "No upcoming events"
+msgstr "Inga kommande kurstillfällen"
+
+#: templates/courses.php:221
+#, php-format
+msgid "Dates for %s"
+msgstr "Datum för %s"
+
+#: templates/modal.php:6
+msgid "Register on Event"
+msgstr "Registrera dig"
+
+#: templates/modal.php:19
+msgid "Given Name *"
+msgstr "Förnamn *"
+
+#: templates/modal.php:24
+msgid "Surname *"
+msgstr "Efternamn *"
+
+#: templates/modal.php:28
+msgid "Email *"
+msgstr "E-post *"
+
+#: templates/modal.php:33
+msgid "Phone *"
+msgstr "Telefonnummer *"
+
+#: templates/modal.php:44
+msgid "Title"
+msgstr "Titel"
+
+#: templates/modal.php:59
+msgid "Company *"
+msgstr "Företag *"
+
+#: templates/modal.php:71
+msgid "Sector"
+msgstr "Bransch"
+
+#: templates/modal.php:86
+msgid "Address *"
+msgstr "Adress *"
+
+#: templates/modal.php:91
+msgid "Zip Code *"
+msgstr "Postnummer *"
+
+#: templates/modal.php:96
+msgid "City *"
+msgstr "Postort *"
+
+#: templates/modal.php:101
+msgid "Country *"
+msgstr "Land *"
+
+#: templates/modal.php:103
+msgid "Sweden"
+msgstr "Sverige"
+
+#: templates/modal.php:104
+msgid "Denmark"
+msgstr "Danmark"
+
+#: templates/modal.php:105
+msgid "Finland"
+msgstr "Finland"
+
+#: templates/modal.php:106
+msgid "Norway"
+msgstr "Norge"
+
+#: templates/modal.php:113
+msgid "Apply"
+msgstr "Boka"
